完善发帖机制

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "*",
     "async": "*",
     "ifile": "*",
-    "underscore" : "*"
+    "underscore" : "*",
+    "moment": "*"
   },
   "devDependencies": {
     "mocha": "*",
