完美支持gfm式markdown

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "async": "*",
     "ifile": "*",
     "underscore" : "*",
-    "moment": "*"
+    "moment": "*",
+    "marked": "*"
   },
   "devDependencies": {
     "mocha": "*",
