添加部分cdn支持

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "moment": "*",
     "marked": "*",
     "highlight.js": "*",
-    "winston": "*"
+    "winston": "*",
+    "qiniu": "*"
   },
   "devDependencies": {
     "mocha": "*",
