--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.6",
   "description": "a micro bbs system based on duoshuo.com apis",
   "main": "app.js",
+  "author": "turing",
+  "license": "MIT",
   "scripts": {
     "start": "node server.js",
     "test": "./node_modules/mocha/bin/mocha ./test/test.js"
@@ -11,6 +13,9 @@
     "type": "git",
     "url": "https://github.com/turingou/candy.git"
   },
+  "bugs": {
+    "url": "https://github.com/turingou/candy/issues"
+  },
   "keywords": [
     "candy",
     "bbs",
@@ -18,11 +23,6 @@
     "duoshuo",
     "social"
   ],
-  "author": "turing",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/turingou/candy/issues"
-  },
   "dependencies": {
     "duoshuo":"*",
     "express": "3.3.1",
@@ -35,8 +35,7 @@
     "moment": "*",
     "marked": "*",
     "highlight.js": "*",
-    "winston": "*",
-    "qiniu": "*"
+    "winston": "*"
   },
   "devDependencies": {
     "mocha": "*",
