remove dep on wiston, update app.js

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "underscore" : "*",
     "moment": "*",
     "marked": "*",
-    "highlight.js": "*",
-    "winston": "*"
+    "highlight.js": "*"
   },
   "devDependencies": {
     "mocha": "*",
