--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "underscore" : "*",
     "moment": "*",
     "marked": "*",
-    "highlight.js": "*"
+    "highlight.js": "*",
+    "member": "*"
   },
   "devDependencies": {
     "mocha": "*",
