--- a/configs.json
+++ b/configs.json
@@ -8,6 +8,9 @@
     "database": {
         "name": "candy"
     },
+    "session": {
+        "store": true
+    },
     "duoshuo": {
         "short_name": "candydemo",
         "secret": "055834753bf452f248602e26221a8345"
