--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "marked": "~0.3.1",
     "underscore": "*",
     "highlight.js": "~8.0.0",
-    "express-scaffold": "~0.2.1"
+    "express-scaffold": "~0.2.1",
+    "candy-theme-flat": "https://github.com/turingou/candy-theme-flat"
   }
 }
