--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ public/stylesheets/duoshuo-embed.css
 database.json
 *.getcandy.*
 getcandy.js
-public/candy-theme-flat
+public/candy-theme-*
 *_old
 .idea/
