--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "highlight.js": "~8.0.0",
     "theme": "~0.0.6",
     "express-scaffold": "~0.3.3",
-    "express-installer": "*",
+    "express-installer": "~0.0.2",
     "express-current": "*",
     "candy-theme-flat": "git://github.com/turingou/candy-theme-flat.git"
   }
