--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "social"
   ],
   "dependencies": {
-    "duoshuo": "0.2.6",
+    "duoshuo": "0.3",
     "async": "~0.2.10",
     "moment": "~2.5.1",
     "marked": "~0.3.1",
@@ -33,6 +33,6 @@
     "highlight.js": "~8.0.0",
     "express-scaffold": "0.4.0",
     "express-installer": "~0.0.3",
-    "candy-theme-flat": "git://github.com/turingou/candy-theme-flat.git"
+    "candy-theme-flat": "0.1.0"
   }
 }
