--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "candy",
-  "version": "0.2.0",
-  "description": "a micro bbs system based on duoshuo.com apis",
-  "main": "index.js",
-  "author": "turing",
+  "name": "Candy",
+  "version": "1.0.0",
+  "description": "a micro forum using duoshuo apis as a backend database",
+  "main": "app.js",
+  "author": "turing <o.u.turing@Gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
@@ -21,18 +21,22 @@
     "bbs",
     "forum",
     "duoshuo",
-    "social"
+    "social",
+    "sns"
   ],
   "dependencies": {
+    "bluebird": "^2.9.34",
+    "candy-theme-flat": "0.1.0",
     "duoshuo": "0.3",
-    "theme": "0.0.8",
-    "async": "~0.2.10",
-    "moment": "~2.5.1",
-    "marked": "~0.3.1",
-    "underscore": "*",
-    "highlight.js": "~8.0.0",
-    "express-scaffold": "0.4.2",
-    "express-installer": "~0.0.3",
-    "candy-theme-flat": "0.1.0"
+    "express": "4.13.1",
+    "highlight.js": "8.6.0",
+    "marked": "0.3.3",
+    "moment": "2.10.3",
+    "mongoose": "^4.0.7",
+    "theme": "0.1.0",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel": "^5.6.23"
   }
 }
